--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>React Router Example</title>
-    <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Hairline|Bungee+Shade" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Hairline|Bungee+Outline|Bungee+Shade" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
