--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>React Router Example</title>
     <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Hairline|Bungee+Outline|Bungee+Shade" rel="stylesheet">
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=ENV[GOOGLE_API_KEY]&callback=initMap" type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
