adding Google maps API key

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>React Router Example</title>
     <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Hairline|Bungee+Outline|Bungee+Shade" rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key="AIzaSyCafaB1ep_JSkye8jnRnTQewEhS5GU5orQ"></script>
+
   </head>
   <body>
     <div id="root"></div>
